--- a/payload/lib/systemd/system/packages-script.service
+++ b/payload/lib/systemd/system/packages-script.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Unattended package installation on the Pi
-Wants=network-online.target
+Requires=network-online.target
 After=network-online.target
 
 [Install]
